changes in packeges

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
+  "engines": {
+    "node": ">=16.13.0"
+  },
   "license": "ISC",
   "description": "",
   "dependencies": {
